--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "WriTe",
-    "name": "Naro Notes",
+    "short_name": "Cong. Phone",
+    "name": "CONG. PhoneBook",
     "description": "...",
     "icons": [
         {
